fix overflow in mobile

--- a/style.css
+++ b/style.css
@@ -276,6 +276,7 @@ body{
   flex-direction: column;
   overflow-y: auto;
   max-height: 85vh;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -378,6 +379,7 @@ body{
 
   .graduations-card-body {
     height: auto;
+    margin: 1%;
   }
 
   .graduations-card-title {
